Remove GraalVM module exports (#717)
This shouldn't be necessary with Micronaut 4 anymore, since we don't use
any internal API. However as a "safety measure", there's a static method
on the plugin which would let users add these if needed.