@@ -7,15 +7,4 @@ class AbstractEagerConfiguringFunctionalTest extends AbstractFunctionalTest {
     BuildResult build(String... args) {
         return super.build("tasks", *args)
     }
-
-
-    String getGraalVMBuilderExports() {
-        ["org.graalvm.nativeimage.builder/com.oracle.svm.core.configure",
-         "org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk",
-         "org.graalvm.nativeimage.builder/com.oracle.svm.core.jni",
-         "org.graalvm.sdk/org.graalvm.nativeimage.impl"
-        ].collect {
-            "-J--add-exports=$it=ALL-UNNAMED"
-        }.join(" ")
-    }
 }
